# DOS2015

./: .gitignore  README.md
CoinChange/: CoinChange.hs
Countdown/: Countdown.hs  CountdownFast.hs
CountdownCS/: CountdownCS.sln
CountdownCS/CountdownCS/: CountdownCS.csproj  Program.cs
CountdownCS/CountdownCS/Properties/: AssemblyInfo.cs
CountdownGame/: .gitignore  CountdownGame.cabal  LICENSE  cabal.config
CountdownGame/src/lib/Countdown/: Game.hs
CountdownGame/src/lib/Countdown/Game/: Attempts.hs  Players.hs
CountdownGame/src/web/: Main.hs
CountdownGame/src/web/CountdownGame/: Actions.hs  Cookies.hs  Database.hs  Players.hs  References.hs  Spiel.hs  State.hs
CountdownGame/src/web/CountdownGame/Database/: Models.hs
CountdownGame/src/web/CountdownGame/Spiel/: Phasen.hs
CountdownGame/src/web/CountdownGame/State/: Definitions.hs  Rounds.hs  Snapshots.hs
CountdownGame/src/web/CountdownGame/Views/: Admin.hs  Highscores.hs  Index.hs  Play.hs  Register.hs
CountdownGame/static/: admin.js  player.js  styles.css
CountdownGame/test/Countdown/: AttemptsSpecs.hs
Pascal/: Pascal.lhs  PascalLoesung.lhs
